@@ -23,12 +23,7 @@ var currentPlayingTrackPosition = 0;
 var lmsNowPlaying = Vue.component("lms-now-playing", {
     template: `
 <div>
- <div v-show="!desktopLayout || info.show || largeView" class="np-bgnd">
-  <div v-show="info.show ? drawInfoBgndImage : drawBgndImage" class="np-bgnd bgnd-cover" id="np-bgnd">
-   <div v-bind:class="{'np-bgnd bgnd-blur':(info.show ? drawInfoBgndImage : drawBgndImage)}"></div>
-  </div>
- </div>
-
+ <div v-show="!desktopLayout || info.show || largeView" class="np-bgnd" v-bind:class="[(info.show ? drawInfoBgndImage : drawBgndImage) ? 'np-bgnd-cover':'np-bgnd-cover-none']" id="np-bgnd"></div>
  <v-tooltip top :position-x="timeTooltip.x" :position-y="timeTooltip.y" v-model="timeTooltip.show">{{timeTooltip.text}}</v-tooltip>
  <v-menu v-model="menu.show" :position-x="menu.x" :position-y="menu.y" absolute offset-y>
   <v-list>
